<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNavMenu"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/containerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorNavMenu"
        tools:context="apps.akayto.socialleague.Activity.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/login_EdtEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/icone_073" />

        <EditText
            android:id="@+id/login_EdtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/edt_Insira_seu_Email"
            android:inputType="textEmailAddress|textEmailSubject"
            android:singleLine="false"
            android:textColor="@color/colorNavLetras"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/login_EdtSenha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/login_EdtSenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/edt_Insira_sua_Senha"
            android:inputType="textPassword"
            android:textColor="@color/colorNavLetras"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/login_CheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_EdtEmail" />

        <Button
            android:id="@+id/login_BntEntrar"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/bnt_Entrar"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_ProgressBar" />

        <TextView
            android:id="@+id/login_TxtCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/txt_Criar_uma_conta"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/login_ProgressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_TxtEsqueciSenha" />

        <TextView
            android:id="@+id/login_TxtEsqueciSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/txt_Esqueci_Senha"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/login_TxtCadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_CheckBox" />

        <ProgressBar
            android:id="@+id/login_ProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/login_BntEntrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_TxtCadastrar"
            tools:visibility="invisible" />

        <CheckBox
            android:id="@+id/login_CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:buttonTint="@color/Theme3"
            android:checked="true"
            android:text="@string/check_Continuar_Logado"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/login_TxtEsqueciSenha"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_EdtSenha" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>